Add another pre-commit hook to check that YAML files are properly formatted. Rename the pre-commit checking job in Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
     #############################################################
 
     - stage: "Run tests"
-      name: "Code formatting matches guidelines"
+      name: "Pre-commit hooks are all satisfied"
       python: 3.7
       install:
         - pip3 install pre-commit
