--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v2.5.0
     hooks:
       - id: check-ast
+      - id: check-yaml
       - id: detect-private-key
       - id: trailing-whitespace
       - id: requirements-txt-fixer
