Make some modifications to the Docker-based deployment of the site. - Add a Memcached server to cache templates and database queries - Update the autogen_config.py script to include options for caching. - Move Dockerfiles and related configuration files/scripts to the docker/ directory. - Build a new Nginx Docker container rather than pulling nginx:1.17.9 and adding config files using volumes. - Fix Nginx / Docker config so that static files are now served from Nginx correctly.

--- a/deploy_tools/options.yaml
+++ b/deploy_tools/options.yaml
@@ -49,6 +49,21 @@ DATABASE_HOST:
     The host where the database is located. If you're using docker-compose
     to run the site, this should probably be set to "tec-database".
 
+CACHE_BACKEND:
+  default:
+  help: >
+    The caching framework to use. Caching helps speed up the site by reducing
+    database queries and template generation.
+  options:
+    - memcached
+    - dummy
+
+MEMCACHED_HOSTS:
+  default: tec-cache
+  help: >
+    Comma-separated list of hosts running Memcached servers to be used with
+    Django's caching framework. Ignored when CACHE_BACKEND is not "memcached".
+
 REDIRECT_HTTP_TO_HTTPS:
   default: "no"
   help: >
