--- a/docker/nginx/proxy.conf
+++ b/docker/nginx/proxy.conf
@@ -19,14 +19,14 @@ server {
         proxy_redirect off;
     }
 
-    location /static/ {
-        # for static content
-        alias /opt/services/tec-gunicorn/staticfiles/;
-    }
+    # location /static/ {
+    #     # for static content
+    #     alias /opt/services/tec-gunicorn/staticfiles/;
+    # }
 
     location ~* /research/login {
         limit_req zone=mylimit;
-        # everything is passed to Gunicorn
+        
         proxy_pass http://encryption_compendium_server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
