Fix Docker deployment.

--- a/docker/nginx/proxy.conf
+++ b/docker/nginx/proxy.conf
@@ -19,10 +19,11 @@ server {
         proxy_redirect off;
     }
 
-    # location /static/ {
-    #     # for static content
-    #     alias /opt/services/tec-gunicorn/staticfiles/;
-    # }
+    location /static/ {
+        # Serve static files from Nginx since it's _significantly_ more performant
+        # than having Gunicorn serve those files.
+        alias /opt/services/tec-gunicorn/staticfiles/;
+    }
 
     location ~* /research/login {
         limit_req zone=mylimit;
