--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,13 +53,12 @@ services:
     env_file:
       - .env
     volumes:
-      - ./src:/var/src/:ro
-      # - staticfiles:/var/src/assets:rw
+      - staticfiles:/var/www/static:rw
+      - ./src:/var/www/:ro
     ports:
       - "5000:5000"
     networks:
       - tec-net
-      - tec-nginx
 
   # Proxyserver
   proxy:
@@ -69,25 +68,26 @@ services:
     container_name: tec-proxy
     ports:
       - 8000:80
-    # volumes:
-    #   # Shared volume with the gunicorn server that allows us to
-    #   # serve static files.
-    #   - staticfiles:/opt/services/tec-gunicorn/assets:ro
+    volumes:
+      # Shared volume with the gunicorn server that allows us to
+      # serve static files.
+      - staticfiles:/opt/services/tec-gunicorn/assets:ro
     depends_on:
       - gunicorn
     networks:
-      - tec-nginx
+      - tec-net
 
   # Webserver cache
   cache:
     image: memcached:1.6-alpine
     container_name: tec-cache
+    networks:
+      - tec-net
 
 networks:
   tec-net:
-  tec-nginx:
 
 volumes:
   site-db:
   solrdata:
-  # staticfiles:
+  staticfiles:
