Fix missing default option for CACHE_BACKEND when generating a .env file using the autogen_config.py script.

--- a/deploy_tools/options.yaml
+++ b/deploy_tools/options.yaml
@@ -50,7 +50,7 @@ DATABASE_HOST:
     to run the site, this should probably be set to "tec-database".
 
 CACHE_BACKEND:
-  default:
+  default: memcached
   help: >
     The caching framework to use. Caching helps speed up the site by reducing
     database queries and template generation.
