Give the www-data user permissions over the /var/www/static directory.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       dockerfile: docker/gunicorn/Dockerfile
     image: tec-gunicorn:latest
     container_name: tec-gunicorn
+    user: www-data
     depends_on:
       - database
       - search
