--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -10,3 +10,11 @@ RUN adduser -D -s /bin/false -G www-data www-data
 
 # Create directory for caching
 RUN mkdir -p /data/nginx/cache
+
+RUN apk update \
+    && apk add --no-cache openssl \
+    && mkdir -p /tls/encryptioncompendium.org/
+
+# Add a custom run script
+COPY run.sh /run.sh
+CMD [ "/run.sh" ]
