--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -14,14 +14,10 @@ server {
     client_max_body_size 4G;
     server_name _;
 
-    #ssl_certificate ${SSL_CERT};
-    #ssl_certificate_key ${SSL_KEY};
+    ssl_certificate /tls/fullchain.pem;
+    ssl_certificate_key /tls/privkey.pem;
 
     keepalive_timeout 70;
-
-    # Absolute path to site
-    root /var/www/public/;
-    index index.html;
 
     location / {
         # everything is passed to Gunicorn
