--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -30,8 +30,8 @@ http {
     ssl_prefer_server_ciphers on;
 
     # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    #access_log /var/log/nginx/access.log;
+    #error_log /var/log/nginx/error.log;
 
     # Virtual host configs
     include /etc/nginx/conf.d/*.conf;
