Password-protect access to the Solr instance.

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -12,8 +12,11 @@ RUN adduser -D -s /bin/false -G www-data www-data
 RUN mkdir -p /data/nginx/cache
 
 RUN apk update \
-    && apk add --no-cache openssl \
+    && apk add --no-cache openssl apache2-utils \
     && mkdir -p /tls/encryptioncompendium.org/
+
+# Create an empty .htpasswd file for authentication
+RUN touch /etc/nginx/.htpasswd
 
 # Add a custom run script
 COPY run.sh /run.sh
