--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -3,6 +3,10 @@ upstream encryption_compendium_server {
     server tec-gunicorn:5000;
 }
 
+upstream solr {
+    server tec-search:8983;
+}
+
 limit_req_zone $binary_remote_addr zone=mylimit:10m rate=60r/m;
 
 server {
@@ -25,6 +29,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location /solr/ {
+        proxy_pass http://solr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+
+        auth_basic "Restricted Content";
+        auth_basic_user_file /etc/nginx/.htpasswd;
     }
 
     location /static/ {
