--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ django[argon2] == 3.0.3
 gunicorn == 20.0.4
 psycopg2-binary == 2.8.4
 pylibmc == 1.6.1
-pysolr == 3.8.1
 python-dotenv == 0.11.0
+requests == 2.23.0
